@@ -2,442 +2,248 @@ package com.lucas.atomicadditions.integrations.jei;
 
 import com.lucas.atomicadditions.AtomicAdditions;
 import com.lucas.atomicadditions.recipes.AtomicAMRRecipe;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import mekanism.client.gui.element.GuiInnerScreen;
+import mekanism.client.gui.element.bar.GuiDynamicHorizontalRateBar;
+import mekanism.client.gui.element.gauge.GaugeType;
+import mekanism.client.gui.element.gauge.GuiGasGauge;
+import mekanism.client.gui.element.gauge.GuiGauge;
+import mekanism.client.jei.BaseRecipeCategory;
+import mekanism.client.jei.MekanismJEI;
+import mekanism.client.jei.MekanismJEIRecipeType;
+import mekanism.common.MekanismLang;
+import mekanism.common.lib.Color;
+import mekanism.common.lib.Color.ColorFunction;
 import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
-import mezz.jei.api.gui.drawable.IDrawable;
+import mezz.jei.api.helpers.IGuiHelper;
 import mezz.jei.api.recipe.IFocusGroup;
 import mezz.jei.api.recipe.RecipeIngredientRole;
-import mezz.jei.api.recipe.RecipeType;
-import mezz.jei.api.recipe.category.IRecipeCategory;
-import mekanism.api.chemical.gas.GasStack;
-import mekanism.client.jei.MekanismJEI;
 import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.client.Minecraft;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
+import org.jetbrains.annotations.NotNull;
 
 public class AtomicAMRRecipeCategory
-        implements IRecipeCategory<AtomicAMRRecipe> {
+        extends BaseRecipeCategory<AtomicAMRRecipe> {
 
-    public static final ResourceLocation UID =
-            ResourceLocation.fromNamespaceAndPath(
-                    AtomicAdditions.MODID,
-                    "amr"
-            );
-
-    public static final RecipeType<AtomicAMRRecipe> TYPE =
-            RecipeType.create(
-                    AtomicAdditions.MODID,
-                    "amr",
+    public static final MekanismJEIRecipeType<AtomicAMRRecipe> TYPE =
+            new MekanismJEIRecipeType<>(
+                    ResourceLocation.fromNamespaceAndPath(
+                            AtomicAdditions.MODID,
+                            "amr"
+                    ),
                     AtomicAMRRecipe.class
             );
 
-    private final IDrawable background;
+    private final GuiGauge<?> input1;
+    private final GuiGauge<?> input2;
+    private final GuiGauge<?> output;
 
-    public AtomicAMRRecipeCategory() {
-        background = new AMRBackground();
-    }
+    private AtomicAMRRecipe currentRecipe;
 
-    @Override
-    public RecipeType<AtomicAMRRecipe> getRecipeType() {
-        return TYPE;
-    }
+    public AtomicAMRRecipeCategory(IGuiHelper helper) {
+        super(
+                helper,
+                TYPE,
+                Component.translatable(
+                        "jei.atomicadditions.amr"
+                ),
+                helper.createDrawableIngredient(
+                        mezz.jei.api.constants.VanillaTypes.ITEM_STACK,
+                        AtomicAdditions.CASING_ITEM.get().getDefaultInstance()
+                ),
+                0,
+                0,
+                194,
+                96
+        );
 
-    @Override
-    public Component getTitle() {
-        return Component.translatable(
-                "jei.atomicadditions.amr"
+        /*
+         * MESMA posição da GUI REAL do AMR.
+         *
+         * AtomicScreen:
+         * input 1 -> 7,17
+         * input 2 -> 25,17
+         * output  -> 169,17
+         */
+
+        input1 = addElement(
+                GuiGasGauge.getDummy(
+                        GaugeType.STANDARD,
+                        this,
+                        7,
+                        17
+                )
+        );
+
+        input2 = addElement(
+                GuiGasGauge.getDummy(
+                        GaugeType.STANDARD,
+                        this,
+                        25,
+                        17
+                )
+        );
+
+        output = addElement(
+                GuiGasGauge.getDummy(
+                        GaugeType.STANDARD,
+                        this,
+                        169,
+                        17
+                )
+        );
+
+        /*
+         * MESMO painel central da GUI REAL do AMR.
+         */
+        addElement(
+                new GuiInnerScreen(
+                        this,
+                        45,
+                        17,
+                        122,
+                        60,
+                        () -> {
+
+                            List<Component> list =
+                                    new ArrayList<>();
+
+                            list.add(
+                                    MekanismLang.STATUS.translate(
+                                            MekanismLang.ACTIVE
+                                    )
+                            );
+
+                            if (currentRecipe != null) {
+
+                                list.add(
+                                        Component.translatable(
+                                                "jei.atomicadditions.energy",
+                                                currentRecipe.getEnergyPerTick()
+                                        )
+                                );
+
+                                list.add(
+                                        Component.translatable(
+                                                "jei.atomicadditions.duration",
+                                                currentRecipe.getDuration()
+                                        )
+                                );
+
+                                double rate =
+                                        currentRecipe.getOutputAmount()
+                                                / (double) currentRecipe.getDuration();
+
+                                list.add(
+                                        Component.translatable(
+                                                "jei.atomicadditions.rate",
+                                                String.format(
+                                                        java.util.Locale.ROOT,
+                                                        "%.2f",
+                                                        rate
+                                                )
+                                        )
+                                );
+                            }
+
+                            return list;
+                        }
+                )
+        );
+
+        /*
+         * MESMA barra de progresso da GUI REAL do AMR.
+         */
+        addElement(
+                new GuiDynamicHorizontalRateBar(
+                        this,
+                        getBarProgressTimer(),
+                        7,
+                        79,
+                        178,
+                        ColorFunction.scale(
+                                Color.rgbi(60, 45, 74),
+                                Color.rgbi(100, 30, 170)
+                        )
+                )
         );
     }
 
-    @SuppressWarnings("removal")
     @Override
-    public IDrawable getBackground() {
-        return background;
-    }
+    public void draw(
+            @NotNull AtomicAMRRecipe recipe,
+            @NotNull mezz.jei.api.gui.ingredient.IRecipeSlotsView recipeSlotsView,
+            @NotNull GuiGraphics guiGraphics,
+            double mouseX,
+            double mouseY
+    ) {
+        currentRecipe = recipe;
 
-    @Override
-    public IDrawable getIcon() {
-        return null;
+        super.draw(
+                recipe,
+                recipeSlotsView,
+                guiGraphics,
+                mouseX,
+                mouseY
+        );
     }
 
     @Override
     public void setRecipe(
-            IRecipeLayoutBuilder builder,
-            AtomicAMRRecipe recipe,
-            IFocusGroup focuses
+            @NotNull IRecipeLayoutBuilder builder,
+            @NotNull AtomicAMRRecipe recipe,
+            @NotNull IFocusGroup focuses
     ) {
-        builder.addSlot(
-                RecipeIngredientRole.INPUT,
-                17,
-                18
-        ).addIngredients(
+
+        /*
+         * EXATAMENTE como o SPS do Mekanism:
+         *
+         * initChemical(...)
+         *
+         * Isso conecta o ingrediente do JEI
+         * diretamente à GuiGasGauge.
+         */
+
+        initChemical(
+                builder,
                 MekanismJEI.TYPE_GAS,
-                List.of(
-                        new GasStack(
+                RecipeIngredientRole.INPUT,
+                input1,
+                Collections.singletonList(
+                        new mekanism.api.chemical.gas.GasStack(
                                 recipe.getInput1(),
                                 recipe.getInput1Amount()
                         )
                 )
         );
 
-        builder.addSlot(
-                RecipeIngredientRole.INPUT,
-                17,
-                49
-        ).addIngredients(
+        initChemical(
+                builder,
                 MekanismJEI.TYPE_GAS,
-                List.of(
-                        new GasStack(
+                RecipeIngredientRole.INPUT,
+                input2,
+                Collections.singletonList(
+                        new mekanism.api.chemical.gas.GasStack(
                                 recipe.getInput2(),
                                 recipe.getInput2Amount()
                         )
                 )
         );
 
-        builder.addSlot(
-                RecipeIngredientRole.OUTPUT,
-                137,
-                34
-        ).addIngredients(
+        initChemical(
+                builder,
                 MekanismJEI.TYPE_GAS,
-                List.of(
-                        new GasStack(
+                RecipeIngredientRole.OUTPUT,
+                output,
+                Collections.singletonList(
+                        new mekanism.api.chemical.gas.GasStack(
                                 recipe.getOutput(),
                                 recipe.getOutputAmount()
                         )
                 )
         );
-    }
-
-    private static class AMRBackground implements IDrawable {
-
-        private static final int WIDTH = 176;
-        private static final int HEIGHT = 80;
-
-        @Override
-        public int getWidth() {
-            return WIDTH;
-        }
-
-        @Override
-        public int getHeight() {
-            return HEIGHT;
-        }
-
-        @Override
-        public void draw(
-                GuiGraphics guiGraphics,
-                int xOffset,
-                int yOffset
-        ) {
-            int x = xOffset;
-            int y = yOffset;
-
-            /*
-             * Fundo da interface
-             */
-            guiGraphics.fill(
-                    x,
-                    y,
-                    x + WIDTH,
-                    y + HEIGHT,
-                    0xFF202020
-            );
-
-            /*
-             * Borda externa
-             */
-            drawBorder(
-                    guiGraphics,
-                    x,
-                    y,
-                    WIDTH,
-                    HEIGHT,
-                    0xFF555555
-            );
-
-            /*
-             * Painel central
-             */
-            guiGraphics.fill(
-                    x + 43,
-                    y + 8,
-                    x + 133,
-                    y + 67,
-                    0xFF101010
-            );
-
-            drawBorder(
-                    guiGraphics,
-                    x + 43,
-                    y + 8,
-                    90,
-                    59,
-                    0xFF454545
-            );
-
-            /*
-             * Tanque de entrada 1
-             */
-            drawTank(
-                    guiGraphics,
-                    x + 6,
-                    y + 14,
-                    28,
-                    24
-            );
-
-            /*
-             * Tanque de entrada 2
-             */
-            drawTank(
-                    guiGraphics,
-                    x + 6,
-                    y + 45,
-                    28,
-                    24
-            );
-
-            /*
-             * Tanque de saída
-             */
-            drawTank(
-                    guiGraphics,
-                    x + 142,
-                    y + 29,
-                    28,
-                    24
-            );
-
-            /*
-             * Linha entrada 1
-             */
-            guiGraphics.fill(
-                    x + 34,
-                    y + 25,
-                    x + 55,
-                    y + 27,
-                    0xFF777777
-            );
-
-            /*
-             * Linha entrada 2
-             */
-            guiGraphics.fill(
-                    x + 34,
-                    y + 56,
-                    x + 55,
-                    y + 58,
-                    0xFF777777
-            );
-
-            /*
-             * Linha saída
-             */
-            guiGraphics.fill(
-                    x + 121,
-                    y + 40,
-                    x + 142,
-                    y + 42,
-                    0xFF777777
-            );
-
-            /*
-             * Setas
-             */
-            drawArrow(
-                    guiGraphics,
-                    x + 52,
-                    y + 26
-            );
-
-            drawArrow(
-                    guiGraphics,
-                    x + 52,
-                    y + 57
-            );
-
-            drawArrow(
-                    guiGraphics,
-                    x + 139,
-                    y + 41
-            );
-
-            /*
-             * Núcleo externo
-             */
-            guiGraphics.fill(
-                    x + 63,
-                    y + 25,
-                    x + 113,
-                    y + 56,
-                    0xFF29152F
-            );
-
-            drawBorder(
-                    guiGraphics,
-                    x + 63,
-                    y + 25,
-                    50,
-                    31,
-                    0xFF71438A
-            );
-
-            /*
-             * Núcleo interno
-             */
-            guiGraphics.fill(
-                    x + 75,
-                    y + 32,
-                    x + 101,
-                    y + 49,
-                    0xFF4C2364
-            );
-
-            drawBorder(
-                    guiGraphics,
-                    x + 75,
-                    y + 32,
-                    26,
-                    17,
-                    0xFF9863B5
-            );
-
-            /*
-             * Indicador central
-             */
-            guiGraphics.fill(
-                    x + 83,
-                    y + 37,
-                    x + 93,
-                    y + 44,
-                    0xFFB17BC9
-            );
-
-            /*
-             * Barra de progresso
-             */
-            guiGraphics.fill(
-                    x + 6,
-                    y + 72,
-                    x + 170,
-                    y + 76,
-                    0xFF111111
-            );
-
-            guiGraphics.fill(
-                    x + 7,
-                    y + 73,
-                    x + 169,
-                    y + 75,
-                    0xFF6D378A
-            );
-
-            /*
-             * Texto de energia/duração
-             *
-             * A categoria não possui um recipe atualmente
-             * armazenado no background, portanto essas
-             * informações serão adicionadas posteriormente
-             * através de widgets próprios do JEI.
-             */
-        }
-
-        private void drawTank(
-                GuiGraphics guiGraphics,
-                int x,
-                int y,
-                int width,
-                int height
-        ) {
-            guiGraphics.fill(
-                    x,
-                    y,
-                    x + width,
-                    y + height,
-                    0xFF111111
-            );
-
-            drawBorder(
-                    guiGraphics,
-                    x,
-                    y,
-                    width,
-                    height,
-                    0xFF555555
-            );
-
-            guiGraphics.fill(
-                    x + 3,
-                    y + 3,
-                    x + width - 3,
-                    y + height - 3,
-                    0xFF272033
-            );
-        }
-
-        private void drawBorder(
-                GuiGraphics guiGraphics,
-                int x,
-                int y,
-                int width,
-                int height,
-                int color
-        ) {
-            guiGraphics.fill(
-                    x,
-                    y,
-                    x + width,
-                    y + 1,
-                    color
-            );
-
-            guiGraphics.fill(
-                    x,
-                    y + height - 1,
-                    x + width,
-                    y + height,
-                    color
-            );
-
-            guiGraphics.fill(
-                    x,
-                    y,
-                    x + 1,
-                    y + height,
-                    color
-            );
-
-            guiGraphics.fill(
-                    x + width - 1,
-                    y,
-                    x + width,
-                    y + height,
-                    color
-            );
-        }
-
-        private void drawArrow(
-                GuiGraphics guiGraphics,
-                int x,
-                int y
-        ) {
-            guiGraphics.fill(
-                    x,
-                    y - 2,
-                    x + 5,
-                    y + 2,
-                    0xFFAAAAAA
-            );
-
-            guiGraphics.fill(
-                    x + 3,
-                    y - 4,
-                    x + 7,
-                    y + 4,
-                    0xFFAAAAAA
-            );
-        }
     }
 }
